--- a/admin/templates/style/admin.css
+++ b/admin/templates/style/admin.css
@@ -168,7 +168,7 @@ input[type="button"]:focus,input[type="submit"]:focus{outline:none;}
 .bottomToolbar a.dataBtn{float:right;height:30px;line-height:30px;margin-top:15px;padding:0 11px;background:#3d566d;font-size:13px;color:#fff;}
 .bottomToolbar a.dataBtn:hover{background:#4f6880;text-decoration:none;}
 .bottomToolbar a.dataBack{float:right;margin:5px 20px 0 0;}
-.bottomToolbar span.selArea{float:left;}
+.bottomToolbar span.selArea{float:left;width:300px;}
 .bottomToolbar span.selArea a{text-decoration:underline;color:#3d566d;}
 .bottomToolbar span.selArea a:hover{color:#3d566d;}
 .bottomToolbar span.selArea span{color:#999;}
@@ -179,7 +179,7 @@ input[type="button"]:focus,input[type="submit"]:focus{outline:none;}
 .quickToolbar .quickArea{width:100%;height:40px;line-height:40px;z-index:900;position:absolute;}
 .quickToolbar .quickArea a.dataBtn{float:right;height:28px;line-height:28px;margin:5px 8px 0 0;padding:0 8px;background:#424242;font-size:13px;color:#fff;}
 .quickToolbar .quickArea a.dataBtn:hover{background:#555;text-decoration:none;}
-.quickToolbar .quickArea span.selArea{float:left;margin-left:8px;}
+.quickToolbar .quickArea span.selArea{float:left;width:300px;margin-left:8px;}
 .quickToolbar .quickArea span.selArea a{text-decoration:underline;color:#333;}
 .quickToolbar .quickArea span.selArea a:hover{color:#333;}
 .quickToolbar .quickArea span.selArea span{color:#666;}
